Autoproxy to target class with cglib

--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,14 @@
             <artifactId>aspectjweaver</artifactId>
             <version>${aspectj.version}</version>
         </dependency>
+
+        <!-- CGLIB -->
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.1</version>
+        </dependency>
+
     </dependencies>
 
 </project>
